# tarware-docker

./: .gitmodules  compose.yaml
manager/: Dockerfile  manager.py  pyproject.toml
simulation/: Dockerfile  pyproject.toml  server.py
streamlit/: Dockerfile  app.py  pyproject.toml
