[project]
name = "tarware-streamlit"
version = "0.1.0"
description = "Streamlit UI for TA-RWARE live simulation streaming"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.37.0",
    "requests==2.32.3",
    "pillow==10.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
